no longer requires dev to calculate number of shards, no longer uses a database to update server count on discordbots.org

--- a/config.json
+++ b/config.json
@@ -1,16 +1,4 @@
 {
-	"physical_server_name" : "poll_bot_one",
 	"discord_token" : "discord token",
-	"discordbotsorg_token" : "discordbots.org token",
-	"db" : {
-		"user" : "user",
-		"password" : "password",
-		"database" : "db",
-		"host" : "host"
-	},
-	"shards" : {
-		"count" : 0,
-		"first_shard_id" : 0,
-		"last_shard_id" : 0
-	}
+	"discordbotsorg_token" : "discordbots.org token"
 }
