made master distributed again

--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {
-	"discord_token" : "discord token",
-	"discordbotsorg_token" : "discordbots.org token"
+	"discord_token" : "",
+    "shards": {
+        "count": 1,
+        "first_shard_id": 0,
+        "last_shard_id": 0
+    }
 }
